# std-adiog

./: CMakeLists.txt
doxygen/: doxygen.py
freepoly/: freepoly.cc  freepoly.h
include/: TimeDelta.h  _adg_iostream.h  _adg_istream.h  _adg_ostream.h  _adg_prettyprint.h  _adg_rawprint.h  forward  googletest  io  smart_iterator  strong  transform_if
loremfeed/: CMakeLists.txt  LoremFeed.h  LoremTest.cc
sandbox/backtrack/nonogram/: nonogram.cc  nonogram_11x11.in  nonogram_11x11.out  nonogram_20x20.in  nonogram_20x20.out  nonogram_30x30.out  nonogram_30x30.txt  nonogram_3x3.in  nonogram_3x3.out  nonogram_8x9.in  nonogram_8x9.out
sandbox/backtrack/sudoku/: sudoku.cc  sudoku.in  sudoku.out
sandbox/c++11/: ref-qualifiers.cpp
sandbox/callInChain/: CMakeLists.txt  callInChainFoldLeftFunction.cpp  callInChainFoldRightFunction.cpp  callInChainForwardOperator.cpp
sandbox/include/: array_view  atimer  erange  googletest  make_array  range  repeat  shout  split  timer  xrange  zip
sandbox/include/algorithm/: BFS.h  DFS.h  Dijkstra.h  EdmondsKarp.h  FordFulkerson.h  KMP.h  KMPIteratorBased.h  LCP.h  LongestCommonSubsequence.h  Manacher.h  ManacherTest.cc  MaximumSpan.h  MergeSort.h  SuffixTree.h  TopologicalSort.h  ford.cc  ford.in
sandbox/tests/: binaryIndexTreeTest.cc  binaryIndexTreeTest.in  binaryIndexTreeTest.out  heapTest.cc  istream_test.cc  ostream_test.cc  test_kmp.cc
sandbox/visualizeDistribution/: VisualizeExponential.cc  VisualizeNormal.cc  VisualizePoisson.cc  VisualizeUniformInt.cc
test/: extend.cc  main.cc  transform_if.cc
(+45 files in other folders)
